AC_INIT([ionarf],[0.2])
AC_CONFIG_SRCDIR([src/gpioonoff.c])
#AC_CONFIG_HEADERS([src/config.h])
AC_GNU_SOURCE
#AH_TEMPLATE(DEBUG_NOT_ICNOVA,shall be set as long as not on\
	    #real icnova platform)
AM_INIT_AUTOMAKE([ color-tests \
		  silent-rules \
		  parallel-tests])
AC_PROG_CC
AM_PROG_CC_C_O
AC_OUTPUT([
Makefile src/Makefile
])

